welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: Missing closing brace `}' assumed here
def loneTeen(a:Int, b:Int):Boolean = { if( (a>=13 && a<=19) || (b>=13 && b<=19) ) {
^